# insightX_Soon

./: .gitignore  package-lock.json  package.json  server.js
.github/workflows/: azure-static-web-apps-ambitious-forest-0bb285e10.yml
program-rust-insightx/: Cargo.toml
program-rust-insightx/src/: lib.rs
smartcontract/: lib.rs
src/app/: globals.css  layout.tsx
src/app/api/generatePoll/: route.ts
src/app/api/getPoll/: route.ts
src/app/api/savePoll/: route.ts
src/app/marketplace/: page.tsx
src/app/services/: MySQLService.ts
src/app/surveybuilder/: page.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/marketplace/: marketplace-feature.tsx
src/components/surveybuilder/: surveybuilder-feature copy.tsx  surveybuilder-feature.tsx
src/components/ui/: ui-layout.tsx
