
[package]
name = "solana-bpf-insightx"
version = "0.0.1"
description = "Decentralized Insights Marketplace"
authors = ["Team CrowdSnap>"]
repository = ""
license = "Apache-2.0"
homepage = "https://crowdsnap.ai/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "2.0.10"

[dev-dependencies]
solana-program-test = "2.0.10"
solana-sdk = "2.0.10"

[lib]
name = "insightx"
crate-type = ["cdylib", "lib"]
